Agregado texto a envios y conocenos, tambien arreglado el problema de tamaño con el index

--- a/envios.html
+++ b/envios.html
@@ -37,13 +37,17 @@
         </header>
     <main class="animate__animated animate__fadeIn">
         <section class="background full-width">
-            <h2>Envios y Precios</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>かわいいだねぇ</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>かわいいだねぇ</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>かわいいだねぇ</p>
+            <h2>Envios y costos</h2>
+            <p>La idea de esta pagina es la de importar productos desde japón o traer productos japoneses de otros países que los importen, lo que hace que los precios por obvias razones tengan que quedar en la moneda en la que se compran..</p>
+            <div class="conteiner-fluid">
+                <div class="row">
+                    <img src="img/envios.jpeg" class="col-lg-5 col-11">
+                    <div class="col-lg-6 col-11">
+                        <p>Ademas del precio en yen o dólar se agregara el costo del envió hasta argentina y el envió hasta la el comprador. El precio una vez comprado el producto no estará sujeto a inflación y se agregaran algunas promociones y ofertas de ser posible el conseguir las cosas mas baratas. Lamentablemente en nuestro país no hay manera de poner precios fijos en pesos y se tendrá que tener en cuenta los impuestos y otros cargos extra que puedan aparecer.</p>
+                        <p>En este párrafo irían mas o menos los costos de los envíos a las distintas partes del país y desde las distintas partes del mundo, el tiempo que tardaría, etc. Esto lo agregare cuando tenga mas información.</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer class="background">
             <h2>Info del sitio</h2>
