--- a/info.html
+++ b/info.html
@@ -38,13 +38,13 @@
     <main class="animate__animated animate__fadeIn">
         <section class="background full-width">
             <h2>Sobre nosotros</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Esta pagina fue creada porque no se me ocurría nada en particular para hacer para el curso de Desarrollo Web pero era necesario que eligiera algo medianamente coherente. Siendo este el caso decidí hacer una especie de tienda Online para cosas de anime y otros productos japoneses que son muy difíciles de conseguir de este lado del charco, dejando los precios en yen y dólar dependiendo de donde consiguiera cada uno.</p>
             <div class="conteiner-fluid">
                 <div class="row">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/7yLxxyzGiko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="col-lg-5 col-11"></iframe>
                     <div class="col-lg-6 col-11">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p>かわいいだねぇ</p>
+                        <p>La idea en particular de una tienda de cosas importadas surgió del hecho del hecho que es muy difícil comprar cosas directamente de japón sin saber japones. Aprovechando que estoy aprendiendo japones por mi parte y que ya tengo el ingles para cuando el mismo sea suficiente, decidí hacer un sitio que, aunque quizás no ahora, podría utilizar para darle un uso comercial a mi conocimiento en idiomas y mi pasión por la cultura y arte japones.Aquí adjunto un video de gatitos por falta de video explicando algo de la tienda, igualmente valioso en mi opinión.</p>
+                        <p>En este párrafo pondría algo sobre el tiempo de experiencia que tengo haciendo esto, el cual ahora es 0 así que no creo que sea muy útil el decirlo, pero quiero llenar un poco mas esta parte de la pagina y hasta ahora no tuve queja alguna de ningun cliente.</p>
                     </div>
                 </div>
             </div>
