Hice cambios recomendados por la tutora

--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="menu__desktop">
-            <h1>Tienda <b>⬤</b> Ganjin</h1>
+            <h1>Tienda <i>⬤</i> Ganjin</h1>
             <a href="index.html">Inicio</a>
             <a href="productos.html">Productos</a>
             <a href="envios.html">Envios</a>
@@ -23,7 +23,7 @@
             <a class="menu__off">Contacto</a>
         </header>
         <header class="menu__mobile">
-            <h1>Tienda <b>⬤</b>Ganjin</h1>
+            <h1>Tienda <i>⬤</i>Ganjin</h1>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">三</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -43,7 +43,7 @@
                         <p>Nombre:</p><input type="text" name="contacto" class="main__input" placeholder="Nombre">
                         <p>Direccion:</p><input type="text" class="main__input" placeholder="Direccion">
                         <p>Telefono:</p><input type="text" class="main__input" placeholder="Telefono">
-                        <p>Informacion extra:</p><textarea name="extra" rows="20" class="main__input" placeholder="Informacion extra"></textarea>
+                        <p>Informacion extra:</p><textarea name="extra" rows="12" class="main__input" placeholder="Informacion extra"></textarea>
                     </div>
                     <img src="img/contacto.png" class="mobile__off">
                 </fieldset>
@@ -63,13 +63,20 @@
                 </fieldset>
             </form>
         </main>
-        <footer class="background">
-            <h2>Info del sitio</h2>
-            <nav>Facebook</nav>
-            <nav>Instagram</nav>
-            <nav>Youtube</nav>
-            <nav>Twitter</nav>
-            <p id="yo">Cañibano Facundo</p>
+        <footer class="background animate__animated animate__fadeIn container col-12">
+            <h2>Nuestras Redes</h2>
+            <div class="d-flex justify-content-around">
+                <p>Facebook</p>
+                <p>Instagram</p>
+                <p>Youtube</p>
+                <p>Twitter</p>
+            </div>
+            <div class="d-flex justify-content-around">
+                <img src="img/facebook.png">
+                <img src="img/instagram.png">
+                <img src="img/youtube.png">
+                <img src="img/twitter.png">
+            </div>
         </footer>
     </main>
 </body>
