--- a/info.html
+++ b/info.html
@@ -15,21 +15,21 @@
     </head>
     <body>
         <header class="menu__desktop">
-            <h1>Tienda <b>⬤</b> Ganjin</h1>
+            <h1>Tienda <i>⬤</i> Ganjin</h1>
             <a href="index.html">Inicio</a>
             <a href="productos.html">Productos</a>
-            <a href="envios.html">Envios</a>
+            <a href="envios.html">Envíos</a>
             <a class="menu__off">Conocenos</a>
             <a href="contacto.html">Contacto</a>
         </header>
         <header class="menu__mobile">
-            <h1>Tienda <b>⬤</b>Ganjin</h1>
+            <h1>Tienda <i>⬤</i>Ganjin</h1>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">三</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a href="index.html">Index</a>
                     <a href="productos.html">Productos</a>
-                    <a href="envios.html">Envios</a>
+                    <a href="envios.html">Envíos</a>
                     <a href="contacto.html">Contacto</a>
                 </div>
                 </div>
@@ -38,25 +38,31 @@
     <main class="animate__animated animate__fadeIn">
         <section class="background full-width">
             <h2>Sobre nosotros</h2>
-            <p>Esta pagina fue creada porque no se me ocurría nada en particular para hacer para el curso de Desarrollo Web pero era necesario que eligiera algo medianamente coherente. Siendo este el caso decidí hacer una especie de tienda Online para cosas de anime y otros productos japoneses que son muy difíciles de conseguir de este lado del charco, dejando los precios en yen y dólar dependiendo de donde consiguiera cada uno.</p>
             <div class="conteiner-fluid">
                 <div class="row">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/7yLxxyzGiko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="col-lg-5 col-11"></iframe>
                     <div class="col-lg-6 col-11">
-                        <p>La idea en particular de una tienda de cosas importadas surgió del hecho del hecho que es muy difícil comprar cosas directamente de japón sin saber japones. Aprovechando que estoy aprendiendo japones por mi parte y que ya tengo el ingles para cuando el mismo sea suficiente, decidí hacer un sitio que, aunque quizás no ahora, podría utilizar para darle un uso comercial a mi conocimiento en idiomas y mi pasión por la cultura y arte japones.Aquí adjunto un video de gatitos por falta de video explicando algo de la tienda, igualmente valioso en mi opinión.</p>
-                        <p>En este párrafo pondría algo sobre el tiempo de experiencia que tengo haciendo esto, el cual ahora es 0 así que no creo que sea muy útil el decirlo, pero quiero llenar un poco mas esta parte de la pagina y hasta ahora no tuve queja alguna de ningun cliente.</p>
+                        <p>Esta pagina fue creada porque <b>no se me ocurría nada en particular</b> para el curso de <b>Desarrollo Web</b> pero era necesario que eligiera algo medianamente coherente. Siendo este el caso decidí hacer una especie de tienda Online para cosas de anime y otros productos japoneses que son muy difíciles de conseguir de este lado del charco, dejando los precios en yen y dólar dependiendo de donde consiguiera cada uno.</p>
+                        <p>La idea en particular de una tienda de cosas importadas surgió del hecho del hecho que <b>es muy difícil comprar cosas directamente de japón sin saber japones.</b> Aprovechando que estoy aprendiendo japones por mi parte y que ya tengo el ingles para cuando el mismo sea suficiente, decidí hacer un sitio que, aunque quizás no ahora, podría utilizar para darle un uso comercial a mi conocimiento en idiomas y mi pasión por la cultura y arte japones. <b>Aquí adjunto un video de gatitos</b> por falta de video explicando algo de la tienda, igualmente valioso en mi opinión.</p>
                     </div>
                 </div>
             </div>
         </section>
         </div>
-        <footer class="background">
-            <h2>Info del sitio</h2>
-            <nav>Facebook</nav>
-            <nav>Instagram</nav>
-            <nav>Youtube</nav>
-            <nav>Twitter</nav>
-            <p id="yo">Cañibano Facundo</p>
+        <footer class="background animate__animated animate__fadeIn container col-12">
+            <h2>Nuestras Redes</h2>
+            <div class="d-flex justify-content-around">
+                <p>Facebook</p>
+                <p>Instagram</p>
+                <p>Youtube</p>
+                <p>Twitter</p>
+            </div>
+            <div class="d-flex justify-content-around">
+                <img src="img/facebook.png">
+                <img src="img/instagram.png">
+                <img src="img/youtube.png">
+                <img src="img/twitter.png">
+            </div>
         </footer>
     </main>
 </body>
