--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     </head>
     <body>
         <header class="menu__desktop">
-            <h1>Tienda <b>⬤</b> Ganjin</h1>
+            <h1>Tienda <i>⬤</i> Ganjin</h1>
             <a class="menu__off">Inicio</a>
             <a href="productos.html">Productos</a>
-            <a href="envios.html">Envios</a>
+            <a href="envios.html">Envíos</a>
             <a href="info.html">Conocenos</a>
             <a href="contacto.html">Contacto</a>
         </header>
         <header class="menu__mobile">
-            <h1>Tienda <b>⬤</b>Ganjin</h1>
+            <h1>Tienda <i>⬤</i>Ganjin</h1>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">三</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a href="productos.html">Productos</a>
-                    <a href="envios.html">Envios</a>
+                    <a href="envios.html">Envíos</a>
                     <a href="info.html">Conocenos</a>
                     <a href="contacto.html">Contacto</a>
                 </div>
@@ -65,21 +65,21 @@
                       </a>
                     </div>
                     <div>
-                        <h2>Lo mas vendido</h2>
+                        <h2>Lo más vendido</h2>
                         <div class="main__masVendido background"><a href="productos.html#nezuko"><img src="img/nezuko.jpg" class="img-fluid" alt="Good Smile Company - Nendoroid Nezuko Kamado With Bonus 1194"></a>
-                            <p class="col-9"><b>Good Smile Company - Nendoroid Nezuko Kamado With Bonus 1194</b>
+                            <p class="col-9"><i>Good Smile Company - Nendoroid Nezuko Kamado With Bonus 1194</i>
                             <br>
                              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </p>
                         </div>
                         <div class="main__masVendido"><a href="productos.html#jojo"><img src="img/jojo.jpg" class="img-fluid" alt="Medicos Super Figure Mascot Strap stone Kamen A Normal version"></a>
-                            <p class="col-9"><b>Medicos Super Figure Mascot Strap stone Kamen A Normal version</b>
+                            <p class="col-9"><i>Medicos Super Figure Mascot Strap stone Kamen A Normal version</i>
                             <br>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </p>
                         </div>
                         <div class="main__masVendido"><a href="productos.html#kracie2"><img src="img/kracie2.jpg" class="img-fluid" alt="Kracie Popin' Cookin' Ice Cream Cake Shop DIY Candy Kit"></a>
-                            <p class="col-9"><b>Kracie Popin' Cookin' Ice Cream Cake Shop DIY Candy Kit</b>
+                            <p class="col-9"><i>Kracie Popin' Cookin' Ice Cream Cake Shop DIY Candy Kit</i>
                             <br>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </p>
@@ -98,13 +98,27 @@
                 </div>
             </div>
         </main>
-        <footer class="background animate__animated animate__fadeIn">
-            <h2>Info del sitio</h2>
-            <nav>Facebook</nav>
-            <nav>Instagram</nav>
-            <nav>Youtube</nav>
-            <nav>Twitter</nav>
-            <p id="yo">Cañibano Facundo</p>
+        <footer class="background animate__animated animate__fadeIn container col-12">
+            <h2>Nuestras Redes</h2>
+            </div>
+            <div class="d-flex justify-content-around">
+                <div class="column">
+                    <p>Facebook</p>
+                    <a href="https://www.facebook.com"><img src="img/facebook.png"></a>
+                </div>
+                <div class="column">
+                    <p>Instagram</p>
+                    <a href="https://www.instagram.com"><img src="img/instagram.png"></a>
+                </div>
+                <div class="column">
+                    <p>Twitter</p>
+                    <a href="https://www.twitter.com"><img src="img/twitter.png"></a>
+                </div>
+                <div class="column">
+                    <p>Youtube</p>
+                    <a href="https://www.youtube.com"><img src="img/youtube.png"></a>
+                </div>
+            </div>
         </footer>
         <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog" data-dismiss="modal">
