--- a/productos.html
+++ b/productos.html
@@ -15,20 +15,20 @@
     </head>
     <body>
         <header class="menu__desktop">
-            <h1>Tienda <b>⬤</b> Ganjin</h1>
+            <h1>Tienda <i>⬤</i> Ganjin</h1>
             <a href="index.html">Inicio</a>
             <a class="menu__off">Productos</a>
-            <a href="envios.html">Envios</a>
+            <a href="envios.html">Envíos</a>
             <a href="info.html">Conocenos</a>
             <a href="contacto.html">Contacto</a>
         </header>
         <header class="menu__mobile">
-            <h1>Tienda <b>⬤</b>Ganjin</h1>
+            <h1>Tienda <i>⬤</i>Ganjin</h1>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">三</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a href="index.html">Index</a>
-                    <a href="envios.html">Envios</a>
+                    <a href="envios.html">Envíos</a>
                     <a href="info.html">Conocenos</a>
                     <a href="contacto.html">Contacto</a>
                 </div>
@@ -50,7 +50,7 @@
                                 <p class="mobile__on">¥1000</p>
                             </a>
                         </th>
-                        <td scope="col" class="table__producto"><b>Movie Version Demon Slayer: Kimetsu no Yaiba infinite train ed Visitor Bonus Koyoharu Gotouge purgatory zero Vol.</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col" class="table__producto"><i>Movie Version Demon Slayer: Kimetsu no Yaiba infinite train ed Visitor Bonus Koyoharu Gotouge purgatory zero Vol.</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td class="mobile__off">¥1000</td>
                     </tr>
                     <tr  id="kimetsu2">
@@ -60,7 +60,7 @@
                                 <p class="mobile__on">¥6000</p>
                             </a>
                         </th>
-                        <td scope="col" class="table__producto"><b>ACOS / Demon Slayer: Kimetsu no Yaiba / Parker / Tanjiro Kamado / L Size (Japanese Size)</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col" class="table__producto"><i>ACOS / Demon Slayer: Kimetsu no Yaiba / Parker / Tanjiro Kamado / L Size (Japanese Size)</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td scope="col" class="mobile__off">¥6000</td>
                     </tr>
                     <tr id="onepiece">
@@ -70,7 +70,7 @@
                                 <p class="mobile__on">¥200</p>
                             </a>
                         </th>
-                        <td scope="col" class="table__producto"><b>Movie Version ONE PIECE STAMPEDE flag cleaner charm collection chopper</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col" class="table__producto"><i>Movie Version ONE PIECE STAMPEDE flag cleaner charm collection chopper</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td scope="col" class="mobile__off">¥200</td>
                     </tr>
                     <tr id="onepiece2">
@@ -80,7 +80,7 @@
                                 <p class="mobile__on">¥3000</p>
                             </a>
                         </th>
-                        <td scope="col" class="table__producto"><b>メガハウス POP/ワンピース 【トニートニー・チョッパー/Tonytony.Chopper】</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+                        <td scope="col" class="table__producto"><i>メガハウス POP/ワンピース 【トニートニー・チョッパー/Tonytony.Chopper】</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
                         <td scope="col" class="mobile__off">¥3000</td>
                     </tr>
                     <tr id="kimetsu3">
@@ -90,7 +90,7 @@
                             </a>
                             <p class="mobile__on">¥400</p>
                         </th>
-                        <td scope="col" class="table__producto"><b>Hasepuro stand mini Acrylic Key Holder Vol.2 Tokitona Ichiro</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col" class="table__producto"><i>Hasepuro stand mini Acrylic Key Holder Vol.2 Tokitona Ichiro</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td scope="col" class="mobile__off">¥400</td>
                     </tr>
                     <tr  id="pocky">
@@ -100,7 +100,7 @@
                                 <p class="mobile__on">U$S2,90</p>
                             </a>
                         </th>
-                        <td scope="col"class="table__producto"><b>Pocky Biscuit Sticks - Chocolate</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col"class="table__producto"><i>Pocky Biscuit Sticks - Chocolate</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td class="mobile__off">U$S2,90</td>
                     </tr>
                     <tr id="kracie">
@@ -110,7 +110,7 @@
                                 <p class="mobile__on">U$S4,90</p>
                             </a>
                         </th>
-                        <td scope="col" class="table__producto"><b>Kracie Popin’ Cookin' Animal Pancake DIY Candy Kit</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col" class="table__producto"><i>Kracie Popin’ Cookin' Animal Pancake DIY Candy Kit</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td scope="col" class="mobile__off">U$S4,90</td>
                     </tr>
                     <tr id="kracie2">
@@ -120,7 +120,7 @@
                                 <p class="mobile__on">U$S4</p>
                             </a>
                         </th>
-                        <td scope="col" class="table__producto"><b>Kracie Popin' Cookin' Ice Cream Cake Shop DIY Candy Kit</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col" class="table__producto"><i>Kracie Popin' Cookin' Ice Cream Cake Shop DIY Candy Kit</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td scope="col" class="mobile__off">U$S4,60</td>
                     </tr>
                     <tr id="nezuko">
@@ -130,7 +130,7 @@
                                 <p class="mobile__on">¥6000</p>
                             </a>
                         </th>
-                        <td scope="col" class="table__producto"><b>Good Smile Company - Nendoroid Nezuko Kamado With Bonus 1194</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col" class="table__producto"><i>Good Smile Company - Nendoroid Nezuko Kamado With Bonus 1194</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td scope="col" class="mobile__off">¥6000</td>
                     </tr>
                     <tr id="jojo">
@@ -140,21 +140,28 @@
                                 <p class="mobile__on">¥600</p>
                             </a>
                         </th>
-                        <td scope="col" class="table__producto"><b>Medicos Super Figure Mascot Strap stone Kamen A Normal version</b> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
+                        <td scope="col" class="table__producto"><i>Medicos Super Figure Mascot Strap stone Kamen A Normal version</i> <p class="mobile__off">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
                         <td scope="col" class="mobile__off">¥600</td>
                     </tr>
             </table>
             <div id='gcw_mainF5KndqjFc' class='gcw_mainF5KndqjFc'></div>
-            <script>function reloadF5KndqjFc(){ var sc = document.getElementById('scF5KndqjFc');if (sc) sc.parentNode.removeChild(sc);sc = document.createElement('script');sc.type = 'text/javascript';sc.charset = 'UTF-8';sc.async = true;sc.id='scF5KndqjFc';sc.src = 'https://freecurrencyrates.com/es/widget-vertical?iso=JPY-USD-ARS&df=2&p=F5KndqjFc&v=fits&source=fcr&width=1000&width_title=0&firstrowvalue=1&thm=A6C9E2,FCFDFD,4297D7,5C9CCC,FFFFFF,C5DBEC,FCFDFD,2E6E9E,000000&title=Cambio%20de%20moneda&tzo=180';var div = document.getElementById('gcw_mainF5KndqjFc');div.parentNode.insertBefore(sc, div);} reloadF5KndqjFc(); 
+            <script>function reloadF5KndqjFc(){ var sc = document.getElementById('scF5KndqjFc');if (sc) sc.parentNode.removeChild(sc);sc = document.createElement('script');sc.type = 'text/javascript';sc.charset = 'UTF-8';sc.async = true;sc.id='scF5KndqjFc';sc.src = 'https://freecurrencyrates.com/es/widget-vertical?iso=JPY-USD-ARS&df=2&p=F5KndqjFc&v=fits&source=fcr&width=365&width_title=0&firstrowvalue=1&thm=A6C9E2,FCFDFD,4297D7,5C9CCC,FFFFFF,C5DBEC,FCFDFD,2E6E9E,000000&title=Cambio%20de%20moneda&tzo=180';var div = document.getElementById('gcw_mainF5KndqjFc');div.parentNode.insertBefore(sc, div);} reloadF5KndqjFc(); 
             </script>
-            <footer class="background">
-                <h2>Info del sitio</h2>
-                <nav>Facebook</nav>
-                <nav>Instagram</nav>
-                <nav>Youtube</nav>
-                <nav>Twitter</nav>
-                <p id="yo">Cañibano Facundo</p>
-            </footer>
+        <footer class="background animate__animated animate__fadeIn container col-12">
+            <h2>Nuestras Redes</h2>
+            <div class="d-flex justify-content-around">
+                <p>Facebook</p>
+                <p>Instagram</p>
+                <p>Youtube</p>
+                <p>Twitter</p>
+            </div>
+            <div class="d-flex justify-content-around">
+                <img src="img/facebook.png">
+                <img src="img/instagram.png">
+                <img src="img/youtube.png">
+                <img src="img/twitter.png">
+            </div>
+        </footer>
         </main>
         <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog" data-dismiss="modal">
