--- a/contacto.html
+++ b/contacto.html
@@ -15,21 +15,21 @@
     </head>
     <body>
         <header class="menu__desktop">
-            <h1>Tienda <i>⬤</i> Ganjin</h1>
+            <h1>Tienda <b>⬤</b> Ganjin</h1>
             <a href="index.html">Inicio</a>
             <a href="productos.html">Productos</a>
-            <a href="envios.html">Envios</a>
+            <a href="envios.html">Envíos</a>
             <a href="info.html">Conocenos</a>
             <a class="menu__off">Contacto</a>
         </header>
         <header class="menu__mobile">
-            <h1>Tienda <i>⬤</i>Ganjin</h1>
+            <h1>Tienda <b>⬤</b> Ganjin</h1>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">三</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a href="index.html">Index</a>
                     <a href="productos.html">Productos</a>
-                    <a href="envios.html">Envios</a>
+                    <a href="envios.html">Envíos</a>
                     <a href="info.html">Conocenos</a>
                 </div>
                 </div>
@@ -65,17 +65,24 @@
         </main>
         <footer class="background animate__animated animate__fadeIn container col-12">
             <h2>Nuestras Redes</h2>
-            <div class="d-flex justify-content-around">
-                <p>Facebook</p>
-                <p>Instagram</p>
-                <p>Youtube</p>
-                <p>Twitter</p>
             </div>
             <div class="d-flex justify-content-around">
-                <img src="img/facebook.png">
-                <img src="img/instagram.png">
-                <img src="img/youtube.png">
-                <img src="img/twitter.png">
+                <div class="column">
+                    <p>Facebook</p>
+                    <a href="https://www.facebook.com"><img src="img/facebook.png"></a>
+                </div>
+                <div class="column">
+                    <p>Instagram</p>
+                    <a href="https://www.instagram.com"><img src="img/instagram.png"></a>
+                </div>
+                <div class="column">
+                    <p>Twitter</p>
+                    <a href="https://www.twitter.com"><img src="img/twitter.png"></a>
+                </div>
+                <div class="column">
+                    <p>Youtube</p>
+                    <a href="https://www.youtube.com"><img src="img/youtube.png"></a>
+                </div>
             </div>
         </footer>
     </main>
