--- a/envios.html
+++ b/envios.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="menu__desktop">
-            <h1>Tienda <i>⬤</i> Ganjin</h1>
+            <h1>Tienda <b>⬤</b> Ganjin</h1>
             <a href="index.html">Inicio</a>
             <a href="productos.html">Productos</a>
             <a class="menu__off">Envíos</a>
@@ -23,7 +23,7 @@
             <a href="contacto.html">Contacto</a>
         </header>
         <header class="menu__mobile">
-            <h1>Tienda <i>⬤</i>Ganjin</h1>
+            <h1>Tienda <b>⬤</b> Ganjin</h1>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">三</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -40,28 +40,35 @@
             <h2>Envios y costos</h2>
             <div class="conteiner-fluid">
                 <div class="row">
-                    <img src="img/envios.jpeg" class="col-lg-5 col-11">
-                    <div class="col-lg-6 col-11">
-                        <p>La idea de esta pagina es la de <b>importar productos desde japón</b> o traer productos japoneses de otros países que los importen, lo que hace que los precios por obvias razones tengan que quedar en la moneda en la que se compran.</p>
-                        <p>Ademas del precio en yen o dólar se agregara el costo del envió hasta argentina y el envió hasta la el comprador. <b>El precio una vez comprado el producto no estará sujeto a inflación</b> y se agregaran algunas promociones y ofertas de ser posible el conseguir las cosas mas baratas. Lamentablemente en nuestro país no hay manera de poner precios fijos en pesos y se tendrá que tener en cuenta los impuestos y otros cargos extra que puedan aparecer.</p>
-                        <p>En este párrafo irían mas o menos <b>los costos de los envíos a las distintas partes del país</b> y desde las distintas partes del mundo, el tiempo que tardaría, etc. Esto lo agregare cuando tenga mas información.</p>
+                    <img src="img/envios.jpeg" class="col-lg-5 col-12 envios">
+                    <div class="col-lg-6 col-12">
+                        <p>La idea de esta pagina es la de <i>importar productos desde japón</i> o traer productos japoneses de otros países que los importen, lo que hace que los precios por obvias razones tengan que quedar en la moneda en la que se compran.</p>
+                        <p>Ademas del precio en yen o dólar se agregara el costo del envió hasta argentina y el envió hasta la el comprador. <i>El precio una vez comprado el producto no estará sujeto a inflación</i> y se agregaran algunas promociones y ofertas de ser posible el conseguir las cosas mas baratas. Lamentablemente en nuestro país no hay manera de poner precios fijos en pesos y se tendrá que tener en cuenta los impuestos y otros cargos extra que puedan aparecer.</p>
+                        <p>En este párrafo irían mas o menos <i>los costos de los envíos a las distintas partes del país</i> y desde las distintas partes del mundo, el tiempo que tardaría, etc. Esto lo agregare cuando tenga mas información.</p>
                     </div>
                 </div>
             </div>
         </section>
         <footer class="background animate__animated animate__fadeIn container col-12">
             <h2>Nuestras Redes</h2>
-            <div class="d-flex justify-content-around">
-                <p>Facebook</p>
-                <p>Instagram</p>
-                <p>Youtube</p>
-                <p>Twitter</p>
             </div>
             <div class="d-flex justify-content-around">
-                <img src="img/facebook.png">
-                <img src="img/instagram.png">
-                <img src="img/youtube.png">
-                <img src="img/twitter.png">
+                <div class="column">
+                    <p>Facebook</p>
+                    <a href="https://www.facebook.com"><img src="img/facebook.png"></a>
+                </div>
+                <div class="column">
+                    <p>Instagram</p>
+                    <a href="https://www.instagram.com"><img src="img/instagram.png"></a>
+                </div>
+                <div class="column">
+                    <p>Twitter</p>
+                    <a href="https://www.twitter.com"><img src="img/twitter.png"></a>
+                </div>
+                <div class="column">
+                    <p>Youtube</p>
+                    <a href="https://www.youtube.com"><img src="img/youtube.png"></a>
+                </div>
             </div>
         </footer>
     </main>
