--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="menu__desktop">
-            <h1>Tienda <i>⬤</i> Ganjin</h1>
+            <h1>Tienda <b>⬤</b> Ganjin</h1>
             <a href="index.html">Inicio</a>
             <a href="productos.html">Productos</a>
             <a href="envios.html">Envíos</a>
@@ -23,7 +23,7 @@
             <a href="contacto.html">Contacto</a>
         </header>
         <header class="menu__mobile">
-            <h1>Tienda <i>⬤</i>Ganjin</h1>
+            <h1>Tienda <b>⬤</b> Ganjin</h1>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">三</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -40,10 +40,10 @@
             <h2>Sobre nosotros</h2>
             <div class="conteiner-fluid">
                 <div class="row">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7yLxxyzGiko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="col-lg-5 col-11"></iframe>
-                    <div class="col-lg-6 col-11">
-                        <p>Esta pagina fue creada porque <b>no se me ocurría nada en particular</b> para el curso de <b>Desarrollo Web</b> pero era necesario que eligiera algo medianamente coherente. Siendo este el caso decidí hacer una especie de tienda Online para cosas de anime y otros productos japoneses que son muy difíciles de conseguir de este lado del charco, dejando los precios en yen y dólar dependiendo de donde consiguiera cada uno.</p>
-                        <p>La idea en particular de una tienda de cosas importadas surgió del hecho del hecho que <b>es muy difícil comprar cosas directamente de japón sin saber japones.</b> Aprovechando que estoy aprendiendo japones por mi parte y que ya tengo el ingles para cuando el mismo sea suficiente, decidí hacer un sitio que, aunque quizás no ahora, podría utilizar para darle un uso comercial a mi conocimiento en idiomas y mi pasión por la cultura y arte japones. <b>Aquí adjunto un video de gatitos</b> por falta de video explicando algo de la tienda, igualmente valioso en mi opinión.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7yLxxyzGiko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="col-lg-5"></iframe>
+                    <div class="col-lg-6 col-12">
+                        <p>Esta pagina fue creada porque <i>no se me ocurría nada en particular</i> para el <i>curso de Desarrollo Web</i> pero era necesario que eligiera algo medianamente coherente. Siendo este el caso decidí hacer una especie de tienda Online para cosas de anime y otros productos japoneses que son muy difíciles de conseguir de este lado del charco, dejando los precios en yen y dólar dependiendo de donde consiguiera cada uno.</p>
+                        <p>La idea en particular de una tienda de cosas importadas surgió del hecho del hecho que <i>es muy difícil comprar cosas directamente de japón sin saber japones.</i> Aprovechando que estoy aprendiendo japones por mi parte y que ya tengo el ingles para cuando el mismo sea suficiente, decidí hacer un sitio que, aunque quizás no ahora, podría utilizar para darle un uso comercial a mi conocimiento en idiomas y mi pasión por la cultura y arte japones. <i>Aquí adjunto un video de gatitos</i> por falta de video explicando algo de la tienda, igualmente valioso en mi opinión.</p>
                     </div>
                 </div>
             </div>
@@ -51,17 +51,24 @@
         </div>
         <footer class="background animate__animated animate__fadeIn container col-12">
             <h2>Nuestras Redes</h2>
-            <div class="d-flex justify-content-around">
-                <p>Facebook</p>
-                <p>Instagram</p>
-                <p>Youtube</p>
-                <p>Twitter</p>
             </div>
             <div class="d-flex justify-content-around">
-                <img src="img/facebook.png">
-                <img src="img/instagram.png">
-                <img src="img/youtube.png">
-                <img src="img/twitter.png">
+                <div class="column">
+                    <p>Facebook</p>
+                    <a href="https://www.facebook.com"><img src="img/facebook.png"></a>
+                </div>
+                <div class="column">
+                    <p>Instagram</p>
+                    <a href="https://www.instagram.com"><img src="img/instagram.png"></a>
+                </div>
+                <div class="column">
+                    <p>Twitter</p>
+                    <a href="https://www.twitter.com"><img src="img/twitter.png"></a>
+                </div>
+                <div class="column">
+                    <p>Youtube</p>
+                    <a href="https://www.youtube.com"><img src="img/youtube.png"></a>
+                </div>
             </div>
         </footer>
     </main>
