--- a/productos.html
+++ b/productos.html
@@ -27,7 +27,7 @@
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">三</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a href="index.html">Index</a>
+                    <a href="index.html">Inicio</a>
                     <a href="envios.html">Envíos</a>
                     <a href="info.html">Conocenos</a>
                     <a href="contacto.html">Contacto</a>
